--- a/BeautyForestAgent/BeautyForestAgent.csproj
+++ b/BeautyForestAgent/BeautyForestAgent.csproj
@@ -50,11 +50,23 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormAbout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAbout.Designer.cs">
+      <DependentUpon>FormAbout.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormAdd.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormAdd.Designer.cs">
       <DependentUpon>FormAdd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormModal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModal.Designer.cs">
+      <DependentUpon>FormModal.cs</DependentUpon>
     </Compile>
     <Compile Include="FormModify.cs">
       <SubType>Form</SubType>
@@ -66,6 +78,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAbout.resx">
+      <DependentUpon>FormAbout.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormAdd.resx">
       <DependentUpon>FormAdd.cs</DependentUpon>
@@ -98,6 +113,7 @@
     <Content Include="img\add.PNG" />
     <Content Include="img\demo.PNG" />
     <Content Include="img\modify.PNG" />
+    <Content Include="img\selin.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
